# BotPlug

./: .gitignore  README.md  pyproject.toml  requirements.txt
botplug/: __main__.py  bot.py  config.py  hook.py
botplug/util/: async_util.py  formatting.py  pager.py  timeformat.py
botplug/util/test/: test_colors.py  test_database.py  test_filesize.py  test_formatting.py  test_timeformat.py  test_tokenbucket.py
frontends/: repl.py
plugins/: admin_channel.py  amazon.py  animal_gifs.py  archwiki.py  asciiart.py  attacks.py  bible.py  bing.py  blackbeard.py  books.py  brainfuck.py  brew.py  cats.py  chatbot.py  cheer.py  correction.py  cryptocurrency.py  cypher.py  dct.py  deals.py  devdocs.py  dig.py  dogpile.py  domainr.py  dragonvale.py  dramatica.py  drinks.py  eightball.py  etymology.py  fact.py  factoids.py  feeds.py  fishbans.py  flip.py  fmk.py  foaas.py  foods.py  fortune.py  funtranslations.py  gaming.py  (+102 more)
