[tool.poetry]
name = "botplug"
version = "0.1.0"
description = "Plugin Oriented Bot for multiple platforms"
authors = ["matheusfillipe"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
